# evengsdk

./: .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/: issue-branch.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_docs.yml  ci.yml  lint.yml  publish.yml
Introduction/: index.html
api_reference/: index.html
cli_reference/: index.html
docs/: Makefile  api_reference.md  cli_reference.md  commands.rst  conf.py  evengsdk.cli.folders.rst  evengsdk.cli.lab.rst  evengsdk.cli.node.rst  evengsdk.cli.nodes.rst  evengsdk.cli.rst  evengsdk.cli.system.rst  evengsdk.cli.users.rst  evengsdk.plugins.rst  evengsdk.rst  index.md  index.rst  installation.rst  make.bat  modules.rst  topo-schema.md  topology_builder.md  usage.rst
examples/: dynamips.py  test_topology.yml  test_topology_nat.yml
examples/configs/: test_leaf01.cfg
examples/data/: leaf03.yml
search/: search_index.json
src/evengsdk/: __init__.py  __main__.py  api.py  client.py  exceptions.py  inventory.py  templates.py
src/evengsdk/api/: __init__.py
src/evengsdk/cli/: __init__.py  cli.py  common.py  console.py  helpers.py  utils.py  version.py
src/evengsdk/plugins/: display.py
src/evengsdk/schemas/: lab-schema.json  validator.py
src/evengsdk/templates/: inventory.ini.j2
src/tests/: conftest.py  test_api.py  test_api_client.py  test_api_lab.py  test_api_network.py  test_cli.py  test_cli_node.py  test_cli_system.py  test_cli_user.py  test_client.py  test_topology_schemas.py
topology_builder/: index.html
(+42 files in other folders)
