[tool.poetry]
name = "evengsdk"
version = "0.1.0"
description = "Python SDK and utilities to work with EVE-NG"
authors = ["Tafsir Thiam <ttafsir@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
python-dotenv = "^0.15.0"
Jinja2 = "^2.11.3"
tabulate = "^0.8.7"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
requests-mock = "^1.8.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -m 'not slow'"
testpaths = ["src/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
